# memorix-example

./: code.code-workspace  schema.memorix
bun/: Makefile  README.md  bun.lockb  package.json
bun/src/: main.ts  schema.generated.ts
deno/: Makefile  deno.json
deno/src/: main.ts
node/: Makefile  package-lock.json  package.json  tsconfig.json
node/src/: main.ts
python/: Makefile  pyproject.toml
python/src/: main.py  schema.generated.py
rust/: Cargo.toml  Makefile
rust/src/: main.rs  schema_generated.rs
